Resolves: tdf#127048 loosen warning from presence to if parsed

rather than warn if lcbCmds indicates some Cmd exist, only warn
if we find something in the Cmd data to attempt to import

Change-Id: I48f7db22d13688597374f7c77d6033c1ce6d7eb3